--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,22 @@
-main {
-    max-width: 840px;
+nav a {
+    color: white;
+    padding: 10px;
+    display: block;
+}
+
+hi {
+    color: steelblue;
+}
+
+main img {
+    width: 150px;
+    height: auto;
+    border: 2px;
+    box-shadow: 0 0 30px gray;
+}
+
+p {
+    padding: 0;
 }
 
 aside {
@@ -12,19 +29,11 @@ aside {
     color: #333;
     text-align: center;
 
-    aside img {
-        width: 200px;
-        height: auto;
-    }
 }
 
-main img {
-    width: 150px;
+aside img {
+    width: 200px;
     height: auto;
-}
-
-p {
-    padding: 0;
 }
 
 footer {
