--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,12 +7,15 @@ main img {
 }
 
 main {
-    max-width: 840;
+    max-width: 840rem;
     max-width: 840px;
 }
 
 h1 {
+    background-color: white;
     color: black;
+    padding: 2px;
+    text-align: center;
 }
 
 nav a {
