--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-color: red;
+    --primary-color: rgb(55, 61, 4);
     --secondary-color: #f4a261;
     --accent1-color: blue;
     --accent2-color: #e9c46a;
@@ -27,7 +27,7 @@ header,
 main,
 footer {
     width: 840px;
-    margin: 0 auto;
+    margin: left;
 }
 
 h1,
@@ -54,15 +54,16 @@ article {
 
 .hero img {
     display: block;
-    width: 40%;
+    width: 100%;
     height: auto;
+
 }
 
 h1 {
     position: absolute;
-    top: 100px;
+    top: 5%;
     width: 100%;
-    padding: 10px;
+    padding: 2%;
     text-align: center;
     opacity: 0.6;
     background-color: var(--accent1-color);
@@ -72,4 +73,5 @@ h1 {
 .hero article img {
     float: right;
     width: 125px;
+    position: absolute;
 }
