--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,9 +6,11 @@ main img {
     box-shadow: 0 0 30px grey;
 }
 
-main {
-    max-width: 840rem;
+header,
+footer,
+.grid {
     max-width: 840px;
+    margin: 0 auto;
 }
 
 h1 {
@@ -19,18 +21,20 @@ h1 {
 }
 
 nav a {
-    color: white;
-    padding: 10px;
     display: block;
+    padding: 0.5rem;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: #fff;
 }
 
 nav {
-    background-color: blue;
-    padding: 20px;
-}
-
-p {
-    padding: 0;
+    background-color: steelblue;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 aside {
@@ -54,4 +58,21 @@ footer {
     margin-top: 15px;
     border-top: 1px solid #000;
     text-align: center;
+}
+
+.grid {
+    display: grid;
+    align-items: center;
+}
+
+main {
+    grid-column: 2/3;
+    margin: 1rem;
+}
+
+aside {
+    width: 20rem;
+    position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
